[gd_scene load_steps=5 format=3 uid="uid://bw76pl3mtet8k"]

[ext_resource type="Script" path="res://Resources/Buffs/buff_class.gd" id="1_yepgx"]
[ext_resource type="Texture2D" uid="uid://ini0j8y2vxsm" path="res://Resources/Art/Consumables/cheese_consumable.png" id="2_jbn4d"]
[ext_resource type="PackedScene" uid="uid://do64c04vimntg" path="res://Scenes/UI/Tooltips/tooltip_panel.tscn" id="3_l8fgb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vu5fm"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="BaseBuff" type="Node2D"]
script = ExtResource("1_yepgx")

[node name="BuffImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_jbn4d")

[node name="BuffUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0

[node name="BuffCounters" type="Label" parent="BuffUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 18.0
offset_right = 17.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuffCounterPanel" type="Panel" parent="BuffUI/BuffCounters"]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(0, 11)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vu5fm")

[node name="TooltipPanel" parent="." instance=ExtResource("3_l8fgb")]
unique_name_in_owner = true

[connection signal="mouse_entered" from="BuffUI" to="." method="_on_buff_ui_mouse_entered"]
[connection signal="mouse_exited" from="BuffUI" to="." method="_on_buff_ui_mouse_exited"]
